# whats-my-ip

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
src/app/: args.rs  handlers.rs  mod.rs
src/infra/: mod.rs
src/infra/clients/network/: common.rs  constants.rs  mod.rs  private.rs  public.rs
src/infra/services/: clipboard.rs
src/utils/: formatters.rs
tests/: copy_to_clipboard.rs  formatters.rs  network.rs
